Added a new target all
Added a new target all  to include clean, compile and jar

--- a/build.xml
+++ b/build.xml
@@ -18,6 +18,10 @@
         </jar>
     </target>
 
+    <target name="all" depends="clean,compile,jar"
+          description="Clean work dirs, then compile and create a JAR"/>
+    
+	
     <target name="run">
         <java jar="build/jar/HelloWorld.jar" fork="true"/>
     </target>
